project-phases/Phase6/terraformer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: terraformer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: terraformer
  template:
    metadata:
      labels:
        app: terraformer
    spec:
      containers:
        - name: terraformer
          image: terraformer/terraformer:latest
          ports:
            - containerPort: 80
